1. Use purcell configuration, https://github.com/purcell/emacs.d

2. Use spacemacs master branch configuration, https://github.com/syl20bnr/spacemacs/tree/master

3. Use spacemacs develop branch configuration, https://github.com/syl20bnr/spacemacs/tree/develop

4. Gradually configure my spacemacs, https://github.com/rgb-24bit/spacemacs-private