@@ -5,3 +5,5 @@
 3. Use spacemacs develop branch configuration, https://github.com/syl20bnr/spacemacs/tree/develop
 
 4. Gradually configure my spacemacs, https://github.com/rgb-24bit/spacemacs-private
+
+5. Use spacemacs-base distribution, https://github.com/rgb-24bit/spacemacs-private
